--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,42 +1,42 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Tema para a splash screen -->
-    <style name="Theme.App.Splash" parent="Theme.SplashScreen">
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="android:windowBackground">@drawable/gradiente_fundo_loading</item>
         <item name="windowSplashScreenBackground">@drawable/gradiente_fundo_loading</item>
-        <item name="windowSplashScreenAnimationDuration">1500</item>
-        <item name="postSplashScreenTheme">@style/Theme.SCManager</item>
-        <item name="android:navigationBarColor">@color/black</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="windowSplashScreenAnimationDuration">200</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item> <!-- Desative o Fullscreen -->
+        <item name="android:navigationBarColor">@color/white</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
-
+        <item name="android:statusBarColor">#81b2cd</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="postSplashScreenTheme">@style/Theme.SCManager</item>
     </style>
+
 
     <!-- Tema para as outras telas -->
     <style name="Theme.SCManager" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:windowFullscreen">false</item> <!-- Desative o Fullscreen -->
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:navigationBarColor">@color/white</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+        <item name="android:statusBarColor">#81b2cd</item> <!-- Cor cinza -->
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
+
 
     <style name="AppBottomSheetDialogTheme"
         parent="Theme.Design.Light.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/AppModalStyle</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+        <item name="android:statusBarColor">#81b2cd</item> <!-- Cor cinza -->
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
     <style name="AppModalStyle"
         parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/fundo_menu_deslizante</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+        <item name="android:statusBarColor">#81b2cd</item> <!-- Cor cinza -->
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
-
-
-
 </resources>
