--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,15 @@
     <!-- Tema Fullscreen -->
     <style name="Theme.Fullscreen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Remove a barra de status (superior) -->
-        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFullscreen">false</item> <!-- Desative o Fullscreen -->
         <!-- Deixar a barra de navegação translúcida -->
         <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:navigationBarColor">@color/white</item>
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+        <item name="android:statusBarColor">#81b2cd</item> <!-- Cor cinza -->
+        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+
     </style>
 
     <!-- Customização do TextInputLayout -->
@@ -16,6 +22,7 @@
         <item name="hintTextColor">@color/black</item> <!-- Cor do hint flutuante -->
         <item name="boxBackgroundColor">@android:color/transparent</item> <!-- Cor de fundo -->
     </style>
+
 
 
 </resources>
